--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,16 +1,15 @@
 <%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
+<!--         <button class="btn btn-default dropdown-toggle" style="border:none;" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+      Kachina <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> -->
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
+    </button>
+      <%= link_to image_tag('/logo2.png', :id => "logo"), root_path, class: 'navbar-brand' %>
     </div>
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse pull-right">
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
         <%= render 'layouts/nav_links_for_auth' %>
